[package]
name = "velo"
version = "0.1.0"
edition = "2026"
authors = ["lingur"]
license = "GPL-V3.0"
description = "Universal package manager for Linux - fast, flexible, and secure"
repository = "https://github.com/yourusername/velo"
readme = "README.md"
keywords = ["package-manager", "linux", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
regex = "1.10"
colored = "2.1"
indicatif = "0.17"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.12"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "velo"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
